[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yomai"
version = "0.1.0"
description = "Streaming-first Python framework for serving LLM agents over HTTP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "starlette>=0.37",
  "uvicorn>=0.29",
  "pydantic>=2",
  "anthropic>=0.40",
  "openai>=1.0",
  "typer>=0.12",
  "httpx>=0.27",
]

[project.scripts]
yomai = "yomai.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["yomai"]
artifacts = ["yomai/py.typed"]

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pyright>=1.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
include = ["yomai", "tests"]
pythonVersion = "3.10"
typeCheckingMode = "basic"
