[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yomai"
version = "0.3.0"
description = "Streaming-first Python framework for serving LLM agents over HTTP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "starlette>=0.37",
  "uvicorn>=0.29",
  "pydantic>=2",
  "anthropic>=0.40",
  "openai>=1.0",
  "typer>=0.12",
  "httpx>=0.27",
]

[project.optional-dependencies]
queue = ["redis>=5.0"]
redis = ["redis>=5.0"]
metrics = ["prometheus-client>=0.21"]
dev = [
  "python-dotenv>=0.21",
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-cov>=6",
  "pyright>=1.1",
  "ruff>=0.11",
]

[project.scripts]
yomai = "yomai.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["yomai"]
artifacts = ["yomai/py.typed"]

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-cov>=6",
  "pyright>=1.1",
  "ruff>=0.11",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=yomai --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["yomai"]
omit = ["tests/*", "scripts/*", "demo-app/*"]

[tool.coverage.report]
fail_under = 0

[tool.pyright]
include = ["yomai", "tests"]
pythonVersion = "3.10"
typeCheckingMode = "standard"

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = ["demo-app", "scripts", "examples", ".venv", "dist"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "W",   # pycodestyle warnings
  "I",   # isort
  "B",   # flake8-bugbear
  "SIM", # flake8-simplify
  "UP",  # pyupgrade
]
ignore = [
  "E501",  # line too long (handled by formatter)
  "B008",  # do not perform function calls in argument defaults
  "SIM108", # use ternary operator (sometimes less readable)
]

[tool.ruff.lint.isort]
known-first-party = ["yomai"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
