[project]
name = "yomai-research-assistant"
version = "0.1.0"
description = "Multi-agent research assistant powered by Yomai"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "yomai @ file:///home/niceiyke/Documents/library/python/yomai/dist/yomai-0.1.0-py3-none-any.whl",
    "httpx>=0.27.0",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pyright>=1.1.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio-mode = "auto"

[tool.pyright]
include = ["app"]
pythonVersion = "3.11"

[tool.ruff]
target-version = "py311"
line-length = 100